--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -1,71 +1,6 @@
-@(members: List[Member], user:User, form:Form[Members.SearchMember], latest: List[SearchLog] )
+@(user:User, form:Form[Members.SearchMember], latest: List[SearchLog] )
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-
-<title>GHI+ Client Portal - Dashboard</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/style.css")" />
-<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/dashstyle.css")" />
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-<script type="text/javascript" src="@routes.Assets.at("javascripts/script.js")"></script>
-
-</head>
-
-@main(members, user) {
-
-<body>
-    <!--START OF HEADER SECTION-->
-    <div id="header">
-        <div id="headercontent">
-            <div id="logo">
-                <a href="dashboard.html" style="display: block; width: 185px; height: 75px;"></a>
-            </div>
-
-            <div id="usernav">
-                <ul class="navigation">
-                    <li><a href="#" class="username"> @user.username </a></li>
-                    <li><img src="@routes.Assets.at("images/user-hr.png")"></li>
-                    <li>
-                        <a href="#" class="settings"><img src="@routes.Assets.at("images/user-gear.png")" border="0"></a>
-                        <div class="sub-nav-wrapper">
-                            <ul class="sub-nav">
-                                <li><a href="#" class="user-setting-icon">User Settings</a></li>
-                                <li> <a href="@routes.Application.logout()" class="user-logout-icon">Sign Out</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <!--END OF HEADER SECTION-->
-
-<div class="clear"></div>
-<div id="container">
-
-<!--START OF SEARCH FORM AT LEFT SIDEBAR-->
-@helper.form(routes.Members.searchMember) {
-    <div class="form">
-            <div class="clientlogo"><img src="@routes.Assets.at("images/acme-small.png")" width="54" height="76"></div>
-            
-            <p class="searchbox">&nbsp;<br>Please enter the Membership Code<br />to view full details.</p>
-            
-            <div class="login" align="right">
-                          
-                <input type="text" name="searchId"  placeholder="Enter Membership Code" class="searchcode" onchange="hideIcon(this);" value="@form("searchId").value"/>
-                
-                @if(flash.contains("error")) {
-                   <div class="error_message">@flash.get("error")</div>
-                }
-                
-                <input type="submit" class="submit" value="Find »" />
-            </div>
-            <br />
-    </div>
-}
-<!--END OF SEARCH FORM AT LEFT SIDEBAR-->   
+@main(user, form) {
 
 <!--START OF LATEST SEARCHES-->
     <div class="content">
@@ -90,16 +25,22 @@
             <tr>
                 <td class="pull-center">
                     
-                    @if( search.member.verificationDetails.verifiedFlag == "N"){
+                    @if( search.member.verificationDetails == null || search.member.verificationDetails.verifiedFlag == "N"){
                         <img class="verified" src="@routes.Assets.at("images/not-verified.png")" title="Not Yet Verified" alt="Not Yet Verified">
                     }
                     
-                    @if( search.member.verificationDetails.verifiedFlag == "F"){
-                        <img class="verified" src="@routes.Assets.at("images/red-flag.png")" title="Flagged Member" alt="Flagged Member">
-                    }
-                    
-                    @if( search.member.verificationDetails.verifiedFlag == "Y"){
-                        <img class="verified" src="@routes.Assets.at("images/verified.png")" title="Verified Member" alt="Verified Member">
+                    @if( search.member.verificationDetails != null ){
+                        @if( search.member.verificationDetails.verifiedFlag == "F"){
+                            <img class="red-flag" src="@routes.Assets.at("images/red-flag.png")" title="Flagged Member" alt="Flagged Member">
+                        }
+                        
+                        @if( search.member.verificationDetails.verifiedFlag == "Y"){
+                            <img class="verified" src="@routes.Assets.at("images/verified.png")" title="Verified Member" alt="Verified Member">
+                        }
+                        
+                        @if( search.member.verificationDetails.watchlistFlag == "Y"){
+                            <img class="verified" src="@routes.Assets.at("images/yellow-flag.png")" title="On Watchlist" alt="On Watchlist">
+                        }
                     }
                     
                 </td>
@@ -108,45 +49,30 @@
                     <ul class="latestsearchlist">
                     <li class="name">@search.member.person.firstName  @search.member.person.surname</li>
                     <li class="details">
-                        @if( search.member.verificationDetails.verifiedDate != null ){
-                        <span class="verified-date">Verified on Mar-31-2013</span>
+                        @if( search.member.verificationDetails == null || search.member.verificationDetails.verifiedFlag == "N"){
+                            <span class="not-verified-date">Not yet verified</span>
+                        }
+                        
+                        @if( search.member.verificationDetails != null ){
+                            @if( search.member.verificationDetails.verifiedFlag == "Y" ){
+                                <span class="verified-date">Verified on @search.member.verificationDetails.verifiedDate.format("MMM-dd-yyyy")</span>
+                            }
+                            @if( search.member.verificationDetails.verifiedFlag == "F" ){
+                                <span class="red-flag-date">Flagged until @search.member.verificationDetails.verifiedDate.format("MMM-dd-yyyy")</span>
+                            }
+                            @if( search.member.verificationDetails.watchlistFlag == "Y" ){
+                                <span class="yellow-flag-date">On Watchlist until @search.member.verificationDetails.watchlistDate.format("MMM-dd-yyyy")</span>
+                            }
                         }
                     </li>
                     </ul>
                 </td>
-                <td class="pull-center">Mar-31-2013</td>
+                <td class="pull-center">@search.searchDate.format("MMM-dd-yyyy")</td>
             </tr>
             } 
             
         </table>
 <!--END OF LATEST SEARCHES-->
 
-    <br /><br />
-    </div>
-
-    @for(member <- members){
-    <li><a href="@routes.Members.viewMember(member.id)">@member.person.firstName @member.person.surname</a></li> } 
-    
-    <br />
-    
-<div class="clear"></div>
-
-<!--FOOTER SECTION-->
-<div id="footer">
-    <div class="footer-about">
-    <p>
-    <a href="#">About</a> &nbsp; &nbsp; 
-    <a href="#">Help</a> &nbsp; &nbsp; 
-    <a href="#">Terms</a> &nbsp; &nbsp; 
-    <a href="#">Privacy</a> &nbsp; &nbsp; 
-    <a href="#">Contact Us</a></p>
-    </div>
-    
-    <div class="footer-copy">
-     <p>© 2013 <a href="http://www.portland-software.com" target="_blank">Portland Software</a> &nbsp; &nbsp; ∙ &nbsp; &nbsp; Powered by <a href="http://www.volenday.com" target="_blank">Volenday</a></p>
-    </div>
-</div>
-
-</body>
 }
-</html>
+
