--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,12 +1,92 @@
-@(members: List[Member], user:User)(content: Html)
+@(user:User, form:Form[Members.SearchMember])(content: Html)
 
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
 
-<html>
-    <head>
-        <title>Providers</title>
-    </head>
-    <body>
-        @content
-    </body>
+<title>GHI+ Client Portal - Dashboard</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/style.css")" />
+<link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/dashstyle.css")" />
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/script.js")"></script>
+
+</head>
+
+<body>
+    <!--START OF HEADER SECTION-->
+    <div id="header">
+        <div id="headercontent">
+            <div id="logo">
+                <a href="dashboard.html" style="display: block; width: 185px; height: 75px;"></a>
+            </div>
+
+            <div id="usernav">
+                <ul class="navigation">
+                    <li><a href="#" class="username"> @user.username </a></li>
+                    <li><img src="@routes.Assets.at("images/user-hr.png")"></li>
+                    <li>
+                        <a href="#" class="settings"><img src="@routes.Assets.at("images/user-gear.png")" border="0"></a>
+                        <div class="sub-nav-wrapper">
+                            <ul class="sub-nav">
+                                <li><a href="#" class="user-setting-icon">User Settings</a></li>
+                                <li> <a href="@routes.Application.logout()" class="user-logout-icon">Sign Out</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!--END OF HEADER SECTION-->
+     
+    <div class="clear"></div>
+    <div id="container">
+     
+    <!--START OF SEARCH FORM AT LEFT SIDEBAR-->
+        @helper.form(routes.Members.searchMember) {
+            <div class="form">
+                    <div class="clientlogo"><img src="@routes.Assets.at("images/acme-small.png")" width="54" height="76"></div>
+                    
+                    <p class="searchbox">&nbsp;<br>Please enter the Membership Code<br />to view full details.</p>
+                    
+                    <div class="login" align="right">
+                                  
+                        <input type="text" name="searchId"  placeholder="Enter Membership Code" class="searchcode" onchange="hideIcon(this);" value="@form("searchId").value"/>
+                        
+                        @if(flash.contains("error")) {
+                           <div class="error_message">@flash.get("error")</div>
+                        }
+                        
+                        <input type="submit" class="submit" value="Find »" />
+                    </div>
+                    <br />
+            </div>
+        }
+    <!--END OF SEARCH FORM AT LEFT SIDEBAR-->  
+    
+    
+    @content
+
+    </div>
+
+    <div class="clear"></div>
+
+    <!--FOOTER SECTION-->
+    <div id="footer">
+        <div class="footer-about">
+        <p>
+        <a href="#">About</a> &nbsp; &nbsp; 
+        <a href="#">Help</a> &nbsp; &nbsp; 
+        <a href="#">Terms</a> &nbsp; &nbsp; 
+        <a href="#">Privacy</a> &nbsp; &nbsp; 
+        <a href="#">Contact Us</a></p>
+        </div>
+        
+        <div class="footer-copy">
+         <p>© 2013 <a href="http://www.portland-software.com" target="_blank">Portland Software</a> &nbsp; &nbsp; ∙ &nbsp; &nbsp; Powered by <a href="http://www.volenday.com" target="_blank">Volenday</a></p>
+        </div>
+    </div>
+</body>
+
 </html>
