Added challenge code and javascript routes.

--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -1,6 +1,6 @@
 @(user:User, form:Form[Members.SearchMember], latest: List[SearchLog] )
 
-@main(user, form) {
+@main(user, form, "GHI+ Client Portal - Dashboard") {
 
 <!--START OF LATEST SEARCHES-->
     <div class="content">
